# hermes-constraint-gate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PYPI_SETUP.md  README.md  SKILL.md  cg_cli.py  cli.py  demo.py  post-hn-discord.md  post-reddit-localllama.md  post-reddit-python.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: config-example-cjk.yaml  config-example-cn.yaml  config-example-en.yaml  config-example.yaml
plugin/: __init__.py  gate.py  plugin.yaml
plugin/gates/: __init__.py  base.py  ends_with.py  engine.py  forbidden_words.py  language_ratio.py  length.py  regex.py  starts_with.py  traditional_chinese.py  utils.py
tests/: test_cli.py  test_gate.py
