[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-constraint-gate"
version = "0.9.2"
description = "Pre-response constraint enforcement for Hermes Agent — 7 pluggable gate types"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["hermes", "plugin", "constraints", "llm", "quality-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["plugin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
