[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-constraint-gate"
version = "0.12.0"
description = "Pre-response constraint enforcement for Hermes Agent — 7 pluggable gate types. CLI included."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "lihaoze120"},
]
dependencies = [
    "pyyaml>=6",
]
keywords = [
    "hermes",
    "plugin",
    "constraints",
    "llm",
    "quality-gate",
    "cli",
    "ai",
    "code-review",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lihaoze120/hermes-constraint-gate"
Repository = "https://github.com/lihaoze120/hermes-constraint-gate"
Issues = "https://github.com/lihaoze120/hermes-constraint-gate/issues"
Changelog = "https://github.com/lihaoze120/hermes-constraint-gate/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]
lint = ["ruff>=0.4"]

[project.scripts]
cg = "cg_cli:main"

[tool.setuptools.packages.find]
include = ["plugin*"]

[tool.setuptools]
py-modules = ["cg_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
